--- a/pandas/introToPandas.ipynb
+++ b/pandas/introToPandas.ipynb
@@ -1509,7 +1509,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1583,7 +1585,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1660,8 +1664,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1673,7 +1679,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1723,16 +1729,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2c999ffbf08>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a257451a88>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
